--- a/gs-studio/css/App.css
+++ b/gs-studio/css/App.css
@@ -128,7 +128,8 @@ table {
 
 nav img {
   display: block;
-  margin: 20px auto; }
+  margin: 20px auto;
+  height: 275px; }
 
 nav .navbar {
   display: flex;
@@ -138,15 +139,71 @@ nav .navbar {
   padding: 15px; }
   nav .navbar a {
     text-decoration: none;
-    color: white; }
+    color: white;
+    margin: 0px 30px; }
     nav .navbar a :hover {
       color: #c4e1c2;
       text-decoration: underline; }
-  nav .navbar h4 {
-    margin: 0px 20px; }
+  nav .navbar p {
+    font-size: 1.2rem; }
+
+main img {
+  width: 800px; }
+
+main .main_container {
+  width: 800px;
+  margin: 0px auto; }
+  main .main_container h1 {
+    margin-top: 20px; }
+  main .main_container .borders {
+    margin: 20px 0px; }
+  main .main_container h2 {
+    margin-top: 20px; }
+  main .main_container .cardcontainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+    main .main_container .cardcontainer .cards {
+      width: 32%; }
+      main .main_container .cardcontainer .cards .blue_borders {
+        margin: 20px 0px;
+        width: 100%; }
+  main .main_container li {
+    margin: 5px 0px; }
+  main .main_container .testimony {
+    margin: 20px 0px; }
 
 footer {
-  background-color: #1172b9; }
+  background-color: #1172b9;
+  color: white; }
+  footer img {
+    height: 25px;
+    margin: 0px 8px; }
+  footer .foot_container {
+    width: 800px;
+    margin: 30px auto 0px auto;
+    padding: 9px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; }
+    footer .foot_container .foot_text {
+      font-size: 1rem; }
 
 body {
-  font-family: "Montserrat", sans-serif; }
+  font-family: "Montserrat", sans-serif;
+  font-size: 62.5%; }
+  body h1 {
+    font-size: 1.8rem;
+    font-weight: 600; }
+  body h2 {
+    font-size: 1.6rem;
+    font-weight: 600; }
+  body h4 {
+    font-size: 1.4rem;
+    font-weight: 600; }
+  body p {
+    font-size: 1.4rem;
+    line-height: 1.2; }
+  body li {
+    font-size: 1.2rem; }
