--- a/gs-studio/src/scss/footer.scss
+++ b/gs-studio/src/scss/footer.scss
@@ -7,12 +7,15 @@ footer {
     margin: 0px 8px;
   }
   .foot_container {
-    margin: 0px auto;
+    width: 800px;
+    margin: 30px auto 0px auto;
     padding: 9px;
-    width: 65%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    .foot_text {
+      font-size: 1rem;
+    }
   }
 }
