--- a/gs-studio/src/scss/navbar.scss
+++ b/gs-studio/src/scss/navbar.scss
@@ -13,13 +13,15 @@ nav {
     a {
       text-decoration: none;
       color: white;
+      margin: 0px 30px;
+
       :hover {
         color: $teal;
         text-decoration: underline;
       }
     }
-    h4 {
-      margin: 0px 20px;
+    p {
+      font-size: 1.2rem;
     }
   }
 }
