--- a/gs-studio/src/scss/App.scss
+++ b/gs-studio/src/scss/App.scss
@@ -9,6 +9,7 @@ $black: #020000;
 @import "reset.scss";
 @import "navbar.scss";
 @import "home.scss";
+@import "about.scss";
 @import "footer.scss";
 
 body {
