Contact component done.

--- a/gs-studio/src/scss/App.scss
+++ b/gs-studio/src/scss/App.scss
@@ -11,6 +11,7 @@ $black: #020000;
 @import "home.scss";
 @import "about.scss";
 @import "footer.scss";
+@import "contact.scss";
 
 body {
   font-family: "Montserrat", sans-serif;
