--- a/gs-studio/css/App.css
+++ b/gs-studio/css/App.css
@@ -177,7 +177,31 @@ main .main_container {
     font-weight: 600; }
 
 main .about_container {
-  width: 800px; }
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto; }
+  main .about_container #top {
+    margin-top: 60px; }
+  main .about_container .profile_container {
+    display: flex;
+    align-items: center;
+    margin: 30px 0px; }
+    main .about_container .profile_container .border {
+      width: 100%; }
+    main .about_container .profile_container .headshot {
+      width: 32%;
+      margin-right: 20px;
+      border: 5px solid #c4e1c2;
+      border-radius: 100%; }
+    main .about_container .profile_container #heather {
+      border: 5px solid #1172b9; }
+    main .about_container .profile_container img {
+      margin: 20px 0px; }
+    main .about_container .profile_container h1 {
+      font-size: 1.6rem; }
+    main .about_container .profile_container p {
+      font-size: 1.2rem; }
 
 footer {
   background-color: #1172b9;
@@ -195,6 +219,11 @@ footer {
     align-items: center; }
     footer .foot_container .foot_text {
       font-size: 1rem; }
+
+main .contact_page {
+  width: 800px;
+  margin: 0px auto;
+  border: 5px solid red; }
 
 body {
   font-family: "Montserrat", sans-serif;
