About component updated.

--- a/gs-studio/src/scss/contact.scss
+++ b/gs-studio/src/scss/contact.scss
@@ -3,7 +3,7 @@ main {
     width: 800px;
     margin: 0px auto;
 
-    h1 {
+    .heading {
       margin-top: 60px;
       font-size: 1.6rem;
     }
