--- a/gs-studio/src/scss/App.scss
+++ b/gs-studio/src/scss/App.scss
@@ -1,10 +1,6 @@
 $teal: #c4e1c2;
 $blue: #1172b9;
 $black: #020000;
-@mixin blue_text {
-  color: $blue;
-  font-weight: 600;
-}
 
 @import "reset.scss";
 @import "navbar.scss";
@@ -12,6 +8,9 @@ $black: #020000;
 @import "about.scss";
 @import "footer.scss";
 @import "contact.scss";
+@import "services.scss";
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 
 body {
   font-family: "Montserrat", sans-serif;
@@ -25,14 +24,32 @@ body {
     font-weight: 600;
   }
   h4 {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+  h5 {
+    font-size: 1.3rem;
     font-weight: 600;
   }
   p {
-    font-size: 1.4rem;
-    line-height: 1.2;
+    font-size: 1.2rem;
+    line-height: 1.4;
+    margin: 5px 0px;
   }
   li {
     font-size: 1.2rem;
+  }
+
+  .pageIntro {
+    margin: 30px auto 0px auto;
+  }
+
+  .blue_text {
+    color: $blue;
+    font-weight: 600;
+  }
+
+  .bold_text {
+    font-weight: 600;
   }
 }
