--- a/gs-studio/src/scss/contact.scss
+++ b/gs-studio/src/scss/contact.scss
@@ -3,9 +3,10 @@ main {
     width: 800px;
     margin: 0px auto;
 
-    .heading {
-      margin-top: 60px;
-      font-size: 1.6rem;
+    .contact_heading {
+      margin: 60px 0px 60px 0px;
+      font-size: 1.9rem;
+      line-height: 1.3;
     }
 
     .border {
