--- a/gs-studio/src/scss/home.scss
+++ b/gs-studio/src/scss/home.scss
@@ -7,7 +7,7 @@ main {
     margin: 0px auto;
 
     h1 {
-      margin-top: 20px;
+      margin-top: 40px;
     }
 
     .borders {
@@ -15,10 +15,10 @@ main {
     }
 
     h2 {
-      margin-top: 20px;
+      margin-top: 40px;
     }
 
-    .cardcontainer {
+    .card_container {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -38,11 +38,11 @@ main {
     }
 
     .testimony {
-      margin: 20px 0px;
+      margin-top: 40px;
     }
 
-    .blue {
-      @include blue_text;
+    #signature {
+      margin-top: 20px;
     }
   }
 }
