--- a/gs-studio/src/scss/about.scss
+++ b/gs-studio/src/scss/about.scss
@@ -29,8 +29,11 @@ main {
         border-radius: 100%;
       }
 
-      #heather {
+      .headshot2 {
+        width: 32%;
+        margin-right: 20px;
         border: 5px solid $blue;
+        border-radius: 100%;
       }
 
       img {
