--- a/gs-studio/src/scss/App.scss
+++ b/gs-studio/src/scss/App.scss
@@ -1,6 +1,8 @@
 $teal: #c4e1c2;
 $blue: #1172b9;
 $black: #020000;
+$mobile: 500px; //Mobile Screen Size
+$tablet: 800px; //Tablet Screen Size
 
 @import "reset.scss";
 @import "navbar.scss";
