--- a/gs-studio/src/scss/home.scss
+++ b/gs-studio/src/scss/home.scss
@@ -1,13 +1,29 @@
 main {
   .hero {
     width: 800px;
+    @media (max-width: $tablet) {
+      width: 700px;
+    }
+    @media (max-width: $mobile) {
+      width: 325px;
+    }
   }
+
   .main_container {
     width: 800px;
     margin: 0px auto;
+    @media (max-width: $tablet) {
+      width: 700px;
+    }
+    @media (max-width: $mobile) {
+      width: 325px;
+    }
 
     h1 {
       margin-top: 40px;
+      @media (max-width: $mobile) {
+        line-height: 1.2;
+      }
     }
 
     .borders {
@@ -16,19 +32,41 @@ main {
 
     h2 {
       margin-top: 40px;
+      @media (max-width: $mobile) {
+        line-height: 1.2;
+      }
     }
 
     .card_container {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      @media (max-width: $tablet) {
+        width: 700px;
+      }
+      @media (max-width: $mobile) {
+        width: 325px;
+        flex-direction: column;
+        align-items: center;
+      }
 
       .cards {
         width: 32%;
 
+        @media (max-width: $tablet) {
+          width: 28%;
+        }
+        @media (max-width: $mobile) {
+          width: 58%;
+          margin-bottom: 30px;
+        }
+
         .blue_borders {
           margin: 20px 0px;
           width: 100%;
+          // @media (max-width: $mobile) {
+          //   width: 60%;
+          // }
         }
       }
     }
