--- a/gs-studio/src/scss/navbar.scss
+++ b/gs-studio/src/scss/navbar.scss
@@ -4,7 +4,7 @@ nav {
     margin: 20px auto;
     height: 275px;
     @media (max-width: $mobile) {
-      height: 200px;
+      width: 300px;
     }
   }
   .navbar {
@@ -13,12 +13,17 @@ nav {
     justify-content: center;
     background-color: $blue;
     padding: 15px;
+    // @media (max-width: $mobile) {
+    //   flex-direction: column;
+    //   align-items: center;
+    // }
     a {
       text-decoration: none;
       color: white;
       margin: 0px 30px;
       @media (max-width: $mobile) {
-        margin: 0px 15px;
+        margin: 10px 15px;
+        font-size: 0.8rem;
       }
 
       :hover {
