--- a/gs-studio/src/scss/about.scss
+++ b/gs-studio/src/scss/about.scss
@@ -4,8 +4,8 @@ main {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    @media (max-width: $mobile) {
-      width: 325px;
+    @media (max-width: $tablet) {
+      width: 85%;
     }
 
     .heading {
@@ -15,14 +15,17 @@ main {
 
     #top {
       margin-top: 60px;
+      @media (max-width: $tablet) {
+        margin-top: 35px;
+      }
     }
     .profile_container {
       display: flex;
       align-items: center;
       margin: 30px 0px;
       width: 800px;
-      @media (max-width: $mobile) {
-        width: 325px;
+      @media (max-width: $tablet) {
+        width: 100%;
         flex-direction: column;
       }
 
@@ -35,8 +38,11 @@ main {
         margin-right: 20px;
         border: 5px solid $teal;
         border-radius: 100%;
+        @media (max-width: $tablet) {
+          width: 40%;
+        }
         @media (max-width: $mobile) {
-          width: 50%;
+          width: 60%;
         }
       }
 
@@ -45,8 +51,11 @@ main {
         margin-right: 20px;
         border: 5px solid $blue;
         border-radius: 100%;
+        @media (max-width: $tablet) {
+          width: 40%;
+        }
         @media (max-width: $mobile) {
-          width: 50%;
+          width: 60%;
         }
       }
 
@@ -56,7 +65,7 @@ main {
 
       .profile {
         .profile_h1 {
-          @media (max-width: $mobile) {
+          @media (max-width: $tablet) {
             text-align: center;
             line-height: 1.2;
           }
