--- a/gs-studio/src/scss/home.scss
+++ b/gs-studio/src/scss/home.scss
@@ -61,6 +61,9 @@ main {
         .blue_borders {
           margin: 20px 0px;
           width: 100%;
+          @media (max-width: $mobile) {
+            width: 60%;
+          }
         }
       }
     }
