--- a/gs-studio/src/scss/services.scss
+++ b/gs-studio/src/scss/services.scss
@@ -4,10 +4,17 @@
   justify-content: center;
   background-color: $teal;
   padding: 15px;
+  @media (max-width: $tablet) {
+    flex-direction: column;
+  }
   a {
     text-decoration: none;
     color: black;
     margin: 0px 30px;
+    @media (max-width: $tablet) {
+      flex-direction: column;
+      margin: 5px auto;
+    }
 
     :hover {
       color: $blue;
@@ -22,6 +29,9 @@
 .services_container {
   display: flex;
   flex-direction: column;
+  @media (max-width: $tablet) {
+    width: 90%;
+  }
 
   .services_heading {
     margin: 60px auto 60px auto;
@@ -35,18 +45,31 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    @media (max-width: $mobile) {
+      flex-direction: column;
+    }
 
     .cards {
       width: 32%;
+      @media (max-width: $mobile) {
+        width: 75%;
+        margin: 30px auto;
+      }
 
       .blue_borders {
         margin: 20px 0px 10px 0px;
         width: 100%;
+        @media (max-width: $mobile) {
+          width: 60%;
+        }
       }
 
       .card_details {
         display: flex;
         justify-content: space-between;
+        @media (max-width: $tablet) {
+          flex-direction: column;
+        }
       }
     }
   }
@@ -70,6 +93,12 @@
   .tags {
     font-size: 1rem;
   }
+  h4,
+  h5 {
+    @media (max-width: $tablet) {
+      line-height: 1.2;
+    }
+  }
 
   .nav_header {
     display: flex;
@@ -79,8 +108,12 @@
 
     .arrow {
       display: flex;
+      @media (max-width: $mobile) {
+        flex-direction: column;
+      }
       a {
         text-decoration: none;
+
         :hover {
           color: $blue;
           text-decoration: underline;
@@ -88,6 +121,9 @@
       }
       img {
         margin-left: 8px;
+        @media (max-width: $mobile) {
+          display: none;
+        }
       }
     }
   }
@@ -102,6 +138,9 @@
 
     ul {
       margin-right: 80px;
+      @media (max-width: $mobile) {
+        margin-right: 20px;
+      }
 
       li {
         margin-bottom: 15px;
@@ -121,6 +160,9 @@
     }
     img {
       margin-left: 8px;
+      @media (max-width: $mobile) {
+        display: none;
+      }
     }
   }
 }
