--- a/gs-studio/src/scss/contact.scss
+++ b/gs-studio/src/scss/contact.scss
@@ -2,11 +2,23 @@ main {
   section {
     width: 800px;
     margin: 0px auto;
+    @media (max-width: $tablet) {
+      width: 80%;
+    }
 
     .contact_heading {
       margin: 60px 0px 60px 0px;
       font-size: 1.9rem;
       line-height: 1.3;
+      @media (max-width: $tablet) {
+        width: 75%;
+        margin: 60px auto 40px auto;
+      }
+      @media (max-width: $mobile) {
+        font-size: 1.2rem;
+        width: 90%;
+        margin: 60px auto 40px auto;
+      }
     }
 
     .border {
@@ -20,6 +32,9 @@ main {
       align-items: center;
       justify-content: space-between;
       margin-bottom: 100px;
+      @media (max-width: $tablet) {
+        flex-direction: column;
+      }
 
       a {
         font-size: 1.4rem;
@@ -29,7 +44,18 @@ main {
 
       .contact_info {
         width: 48%;
+        @media (max-width: $tablet) {
+          width: 75%;
+        }
+        @media (max-width: $mobile) {
+          width: 95%;
+        }
 
+        #email_icon {
+          @media (max-width: $mobile) {
+            display: none;
+          }
+        }
         .contact {
           width: 100%;
           display: flex;
@@ -37,12 +63,18 @@ main {
           align-items: center;
           margin: 20px 0px;
 
-          a:hover {
-            color: $blue;
-            text-decoration: underline;
+          a {
+            @media (max-width: $mobile) {
+              font-size: 1.2rem;
+            }
+
+            :hover {
+              color: $blue;
+              text-decoration: underline;
+            }
           }
 
-          #icons {
+          .icons {
             width: 25px;
             margin-right: 10px;
           }
@@ -53,6 +85,14 @@ main {
         display: flex;
         flex-direction: column;
         width: 48%;
+        @media (max-width: $tablet) {
+          margin-top: 30px;
+          width: 55%;
+        }
+        @media (max-width: $mobile) {
+          width: 85%;
+          line-height: 1.2;
+        }
 
         .map {
           width: 100%;
@@ -60,9 +100,15 @@ main {
           border: 2px solid $black;
         }
 
-        a:hover {
-          color: $blue;
-          text-decoration: underline;
+        a {
+          @media (max-width: $mobile) {
+            line-height: 1.2;
+          }
+
+          :hover {
+            color: $blue;
+            text-decoration: underline;
+          }
         }
       }
     }
@@ -70,11 +116,13 @@ main {
     .gabe {
       font-size: 1rem;
       text-decoration: none;
-    }
-
-    .gabe:hover {
-      color: $blue;
-      text-decoration: underline;
+      @media (max-width: $mobile) {
+        line-height: 1.3;
+      }
+      :hover {
+        color: $blue;
+        text-decoration: underline;
+      }
     }
   }
 }
