--- a/gs-studio/src/scss/App.scss
+++ b/gs-studio/src/scss/App.scss
@@ -7,6 +7,7 @@ $tablet: 800px; //Tablet Screen Size
 @import "reset.scss";
 @import "navbar.scss";
 @import "home.scss";
+@import "slider.scss";
 @import "about.scss";
 @import "footer.scss";
 @import "contact.scss";
