--- a/gs-studio/src/scss/home.scss
+++ b/gs-studio/src/scss/home.scss
@@ -1,10 +1,20 @@
 main {
   .hero {
-    width: 800px;
-    @media (max-width: $tablet) {
+    display: none;
+    @media (max-width: $mobile) {
       width: 100%;
       display: block;
       margin: 0px auto;
+    }
+  }
+
+  .slider {
+    @media (max-width: $tablet) {
+      width: 100%;
+      height: 350px;
+    }
+    @media (max-width: $mobile) {
+      display: none;
     }
   }
 
