--- a/gs-studio/src/scss/contact.scss
+++ b/gs-studio/src/scss/contact.scss
@@ -17,7 +17,7 @@ main {
       @media (max-width: $mobile) {
         font-size: 1.2rem;
         width: 90%;
-        margin: 60px auto 40px auto;
+        margin: 60px 0px 40px 0px;
       }
     }
 
@@ -64,6 +64,7 @@ main {
           margin: 20px 0px;
 
           a {
+            text-decoration: none;
             @media (max-width: $mobile) {
               font-size: 1.2rem;
             }
@@ -77,6 +78,10 @@ main {
           .icons {
             width: 25px;
             margin-right: 10px;
+          }
+
+          #email_address {
+            font-size: 1rem;
           }
         }
       }
