--- a/gs-studio/src/scss/contact.scss
+++ b/gs-studio/src/scss/contact.scss
@@ -15,9 +15,10 @@ main {
         margin: 60px auto 40px auto;
       }
       @media (max-width: $mobile) {
-        font-size: 1.2rem;
+        line-height: 1.2;
+        font-size: 1.4rem;
         width: 90%;
-        margin: 60px 0px 40px 0px;
+        margin: 60px 0px 40px 10px;
       }
     }
 
@@ -38,8 +39,26 @@ main {
 
       a {
         font-size: 1.4rem;
+        line-height: 1.2;
         font-weight: 600;
         text-decoration: none;
+        :hover {
+          color: $blue;
+          text-decoration: underline;
+        }
+      }
+
+      .divider_container {
+        display: flex;
+        align-items: center;
+
+        .divider {
+          margin: 20px 15px 20px 0px;
+        }
+        .line {
+          border-bottom: 2px solid $blue;
+          width: 85%;
+        }
       }
 
       .contact_info {
